Fix bug where IE would only print one page
IE would only print a single page if the overflow resulted in a scroll bar.
Setting this overflow to visible prevents the rest of the content being cut off.
Additionally disable flex for multichoice checkboxes when printing to prevent
it being printed in a column on IE.

--- a/src/scss/print.scss
+++ b/src/scss/print.scss
@@ -1,6 +1,10 @@
 @media print {
-  // Fix one page print cut off in Firefox
-  div#root, .question-content-container {
+  div#root {
+    display: block !important;
+    overflow: visible !important;
+  }
+
+  .question-content-container {
     display: block !important;
   }
 
@@ -56,6 +60,12 @@
   .parsons-available-items {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+
+  .content-value {
+    .row {
+      display: block !important;
+    }
   }
 }
 
